modifies linespacing to normal and fixs p tag margins

--- a/app/assets/stylesheets/package.css
+++ b/app/assets/stylesheets/package.css
@@ -5,7 +5,8 @@
 }
 
 p {
-  line-height: 20%;
+  line-height: 100%;
+  margin-bottom: -10px;
 }
 
 
